--- a/web/src/assets/pages.css
+++ b/web/src/assets/pages.css
@@ -455,6 +455,10 @@ select.placeholder {
 }
 
 .home_title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   font-size: 6em;
   line-height: 1.2;
   font-weight: 700;
@@ -482,31 +486,31 @@ select.placeholder {
   line-height: 1.5;
   font-size: 0.9em;
 }
-.containercolor{
-
-}
 
 .custom-icon {
   color: #00000083;
 }
 
-.cards {
+.center-cards {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center; 
 }
 
 .card_info {
   line-height: 1.2;
-  width: 13em;
-  height: 10em;
+  width: 12em;
+  height: 4em;
+  margin-top: 20px;
   margin-left: 10px;
   border-radius: 10px;
   padding: 10px;
   transition: 0.5s;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 /* hover em card_info sobe um pouco ele usando transform */
@@ -536,6 +540,7 @@ select.placeholder {
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: space-between;
+  align-items: center;
 }
 
 #filter {
@@ -553,6 +558,11 @@ select.placeholder {
   background: #00000083;
   color: #ffffff;
   border: none;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  font-family: SFProBold;
+  font-size: 1.1em;
+  
 }
 
 .button1:hover::before {
