--- a/web/src/assets/login.css
+++ b/web/src/assets/login.css
@@ -4,9 +4,27 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 93vh;
+  height: 100vh;
   width: 100vw;
+  background: linear-gradient(-45deg, #0e1124, #2a3050, #00c5cc, #006999);
+  background-size: 400% 400%;
+  animation: gradient 8s ease-in-out infinite;
 }
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 
 * {
   font-family: SFProRegular, sans-serif;
@@ -22,25 +40,9 @@
   src: url(./fonts/SFPRODISPLAYREGULAR.OTF);
 }
 
-.bg-login {
-  position: fixed;
-  z-index: -99;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-image: url('../assets/media/bg-login.png');
-  background-size: cover;
-  background-position: center;
-}
-
-.bg-login img {
-  max-width: 100vw;
-}
-
 .form_container {
-  width: 50vh;
-  height: 60vh;
+  width: 25em;
+  height: 30em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -55,7 +57,7 @@
 }
 
 .logo_container {
-  padding-top: 20px;
+  padding-top: 10px;
   display: flex;
   width: 100%;
   justify-content: center;
@@ -159,7 +161,7 @@
   color: black;
 }
 
-.popup {
+.popup1 {
   position: fixed;
   top: 0;
   left: 0;
@@ -172,7 +174,7 @@
   z-index: 999;
 }
 
-.popup.visible {
+.popup1.visible {
   opacity: 1;
   visibility: visible;
 }
