--- a/web/src/assets/pages.css
+++ b/web/src/assets/pages.css
@@ -29,45 +29,6 @@
   transition: all 0.5s ease;
 }
 
-.bgimg {
-  position: fixed;
-  z-index: -99;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-image: url('./media/bg-main.jpg');
-  background-size: cover;
-  background-position: center;
-  transform: rotate(0deg);
-}
-
-.bgimg-second {
-  position: fixed;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background: linear-gradient(0deg, rgb(70, 113, 122) 0%, rgb(77, 178, 198) 100%);
-  opacity: 1;
-  animation: gradient 4s ease-in-out infinite;
-}
-
-@keyframes gradient {
-  0% {
-    opacity: 0;
-  }
-
-  50% {
-    opacity: 0.5;
-  }
-
-  100% {
-    opacity: 0;
-  }
-}
-
 .logout-list {
   margin-top: calc(100vh - 500px);
 }
@@ -223,7 +184,7 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   right: 0;
   width: calc(100vw - 78px);
   transition: all 0.5s ease;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
