--- a/web/src/assets/pages.css
+++ b/web/src/assets/pages.css
@@ -438,16 +438,15 @@ select.placeholder {
 .center-cards {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
   align-items: center;
 }
 
 .card_info {
   line-height: 1.2;
-  width: 12em;
+  width: 14em;
   height: 4em;
-  margin-top: 20px;
+  margin: 1.2em;
+  margin-top: 3em;
   margin-left: 10px;
   border-radius: 10px;
   padding: 10px;
@@ -467,13 +466,13 @@ select.placeholder {
   padding: 10px;
   width: 100%;
   color: rgb(0, 0, 0);
-  font-size: 1.8em;
+  font-size: 2em;
   font-weight: bold;
 }
 
 .card_title {
   padding: 5px;
-  font-size: 1em;
+  font-size: 1.4em;
   font-family: SFProBold;
   color: #00000083;
 }
