--- a/web/src/assets/pages.css
+++ b/web/src/assets/pages.css
@@ -395,6 +395,22 @@ select.placeholder {
   text-align: center;
 }
 
+.textbox {
+  background-color: rgb(0, 70, 84);
+}
+
+.home_title_helpdesk {
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  flex-direction: column;
+  font-size: 2.5em;
+  padding: 0.4em;
+  line-height: 1.2;
+  font-weight: 700;
+  color: white;
+}
+
 .home_title {
   display: flex;
   align-items: center;
