--- a/web/src/assets/pages.css
+++ b/web/src/assets/pages.css
@@ -193,7 +193,7 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   align-items: center;
 }
 
-.sidebar.open ~ .bg-dimmer {
+.sidebar.open~.bg-dimmer {
   backdrop-filter: blur(10px);
   opacity: 0.8;
   z-index: 50;
@@ -422,7 +422,12 @@ select.placeholder {
   color: #11101d;
 }
 
-.home_title .hello {
+.home_title .hello1 {
+  font-family: SFProBold;
+  font-size: 70px;
+}
+
+.home_title .hello1 {
   font-family: SFProBold;
 }
 
@@ -430,7 +435,10 @@ select.placeholder {
   padding-top: 5px;
   font-size: 0.5em;
 }
-
+.home_title .welcome1 {
+  padding-top: 5px;
+  font-size: 33px;
+}
 .home_title .linkful {
   margin-top: 20px;
   font-size: 0.35em;
@@ -588,15 +596,15 @@ select.placeholder {
   transition: all 0.3s;
 }
 
-.ui.two.column.grid > .column {
+.ui.two.column.grid>.column {
   width: 50%;
 }
 
-.ui.two.column.grid > .column:first-child {
+.ui.two.column.grid>.column:first-child {
   padding-right: 10px;
 }
 
-.ui.two.column.grid > .column:last-child {
+.ui.two.column.grid>.column:last-child {
   padding-left: 10px;
 }
 
@@ -626,6 +634,7 @@ label {
   box-sizing: border-box;
   transition: 0.3s;
 }
+
 .campo:focus {
   border-color: rgb(0, 70, 84) !important;
 }
@@ -802,21 +811,25 @@ td.td-desc {
   color: white;
   border-color: white;
 }
+
 .dark-mode .header {
   background-color: #222 !important;
   color: white;
   border-color: white !important;
 }
+
 .dark-mode .item {
   background-color: #222 !important;
   color: white !important;
   border-color: white !important;
 }
+
 .dark-mode .accordion label {
   background-color: #222;
   color: white;
   border-color: white;
 }
+
 .data i.icon,
 .data i.icons {
   font-size: 1.5em;
@@ -866,7 +879,15 @@ td.td-desc {
 }
 
 .bg-table {
-  border-top: 1px solid #d4d4d5; /* Borda superior da "linha" */
-  margin-top: 10px; /* Espaçamento superior */
-  padding: 10px 0; /* Espaçamento interno vertical */
+  border-top: 1px solid #d4d4d5;
+  /* Borda superior da "linha" */
+  margin-top: 10px;
+  /* Espaçamento superior */
+  padding: 10px 0;
+  /* Espaçamento interno vertical */
+}
+
+
+.navhelp {
+  background-color: rgb(0, 70, 84);
 }
